--- a/admin.html
+++ b/admin.html
@@ -570,6 +570,10 @@ body {
   .nav-rail.expanded + .nav-overlay {
     display: block;
   }
+
+  .material-symbols-outlined{
+ display: none;
+  }
   
   .stats-container {
     grid-template-columns: 1fr;
