--- a/admin.html
+++ b/admin.html
@@ -957,7 +957,7 @@ background-color: #2ecc71;
   color: #FF9800; /* Orange color for pending icon */
 }
 
-    /* Mobile Nav Styles */
+  /* Mobile Nav Styles - Circular Menu */
 .mobile-nav {
   display: none;
   position: fixed;
@@ -994,54 +994,98 @@ background-color: #2ecc71;
   position: absolute;
   bottom: 70px;
   right: 0;
-  width: 250px;
-  padding: 10px;
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-  transform: scale(0);
-  transform-origin: bottom right;
-  transition: transform 0.3s;
+  width: 300px;
+  height: 300px;
+  pointer-events: none;
 }
 
 .mobile-menu li {
-  margin: 5px 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #1976D2;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transform: translate(0, 0);
   opacity: 0;
-  transition: opacity 0.3s, transform 0.3s;
-  transform: translateY(10px);
 }
 
 .mobile-menu li a {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
-  padding: 10px;
-  color: #333;
-  border-radius: 4px;
-  transition: background 0.3s;
+  justify-content: center;
+  color: white;
+  position: relative;
 }
 
-.mobile-menu li a:hover {
-  background: #f0f0f0;
+.mobile-menu li a span {
+  position: absolute;
+  top: -30px;
+  background: white;
+  color: #333;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 12px;
+  font-weight: bold;
+  white-space: nowrap;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
 .mobile-menu li a i {
-  margin-right: 10px;
-  color: #1976D2;
+  font-size: 24px;
 }
 
 .mobile-nav input:checked + label {
   background: #333;
 }
 
-.mobile-nav input:checked ~ .mobile-menu {
-  transform: scale(1);
-}
-
 .mobile-nav input:checked ~ .mobile-menu li {
   opacity: 1;
-  transform: translateY(0);
+  pointer-events: auto;
 }
 
+/* Position each menu item in a circle */
+.mobile-nav input:checked ~ .mobile-menu li:nth-child(1) {
+  transform: translate(-70px, -70px);
+}
+.mobile-nav input:checked ~ .mobile-menu li:nth-child(2) {
+  transform: translate(0, -100px);
+}
+.mobile-nav input:checked ~ .mobile-menu li:nth-child(3) {
+  transform: translate(70px, -70px);
+}
+.mobile-nav input:checked ~ .mobile-menu li:nth-child(4) {
+  transform: translate(-100px, 0);
+}
+.mobile-nav input:checked ~ .mobile-menu li:nth-child(5) {
+  transform: translate(100px, 0);
+}
+.mobile-nav input:checked ~ .mobile-menu li:nth-child(6) {
+  transform: translate(-70px, 70px);
+}
+.mobile-nav input:checked ~ .mobile-menu li:nth-child(7) {
+  transform: translate(0, 100px);
+}
+.mobile-nav input:checked ~ .mobile-menu li:nth-child(8) {
+  transform: translate(70px, 70px);
+}
+
+/* Show tooltips on hover */
+.mobile-nav input:checked ~ .mobile-menu li:hover a span {
+  opacity: 1;
+}
+
+/* Add staggered animation delays */
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(1) { transition-delay: 0.1s; }
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(2) { transition-delay: 0.2s; }
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(3) { transition-delay: 0.3s; }
@@ -1051,7 +1095,7 @@ background-color: #2ecc71;
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(7) { transition-delay: 0.7s; }
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(8) { transition-delay: 0.8s; }
 
-/* Show mobile nav only on mobile */
+/* Show only on mobile */
 @media (max-width: 768px) {
   .mobile-nav {
     display: block;
