--- a/admin.html
+++ b/admin.html
@@ -571,7 +571,7 @@ body {
     display: block;
   }
 
-  .material-symbols-outlined{
+  .mob-menu{
  display: none;
   }
   
@@ -1170,7 +1170,7 @@ background-color: #2ecc71;
   </ul>
 </nav>
   
-  <span class="material-symbols-outlined" style="margin-left: -0.75rem;">menu</span>
+  <span class="material-symbols-outlined mob-menu" style="margin-left: -0.75rem;">menu</span>
 </button>
   
 <div class="loader-container" id="loader">
