--- a/admin.html
+++ b/admin.html
@@ -993,7 +993,7 @@ background-color: #2ecc71;
 .mobile-menu {
   position: absolute;
   bottom: 70px;
-  right: 0;
+  right: -7rem;
   width: 300px;
   height: 300px;
   pointer-events: none;
