--- a/admin.html
+++ b/admin.html
@@ -958,6 +958,7 @@ background-color: #2ecc71;
 }
 
   /* Mobile Nav Styles - Circular Menu */
+/* Mobile Nav Styles - Circular Menu with Always-Visible Labels */
 .mobile-nav {
   display: none;
   position: fixed;
@@ -979,21 +980,17 @@ background-color: #2ecc71;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  z-index: 1;
+  z-index: 1001;
   background: #1976D2;
   border-radius: 50%;
   box-shadow: 0 2px 10px rgba(0,0,0,0.2);
   transition: all 0.2s;
 }
 
-.mobile-nav [type="checkbox"] + label:hover {
-  background: #1565C0;
-}
-
 .mobile-menu {
   position: absolute;
   bottom: 70px;
-  right: -7rem;
+  right: 0;
   width: 300px;
   height: 300px;
   pointer-events: none;
@@ -1001,34 +998,44 @@ background-color: #2ecc71;
 
 .mobile-menu li {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 60px;
-  height: 60px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
-  background: #1976D2;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  width: auto;
+  height: auto;
+  background: transparent;
+  box-shadow: none;
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transform: translate(0, 0);
   opacity: 0;
+  pointer-events: none;
 }
 
 .mobile-menu li a {
-  width: 100%;
-  height: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
-  position: relative;
+  text-decoration: none;
+}
+
+.mobile-menu li a i {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #1976D2;
+  border-radius: 50%;
+  margin-bottom: 5px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
 .mobile-menu li a span {
-  position: absolute;
-  top: -30px;
+  position: relative;
+  top: 0;
   background: white;
   color: #333;
   padding: 5px 10px;
@@ -1037,16 +1044,7 @@ background-color: #2ecc71;
   font-weight: bold;
   white-space: nowrap;
   box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
-.mobile-menu li a i {
-  font-size: 24px;
-}
-
-.mobile-nav input:checked + label {
-  background: #333;
+  opacity: 1;
 }
 
 .mobile-nav input:checked ~ .mobile-menu li {
@@ -1054,46 +1052,50 @@ background-color: #2ecc71;
   pointer-events: auto;
 }
 
-/* Position each menu item in a circle */
+/* Position each menu item in a circle with labels */
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(1) {
-  transform: translate(-70px, -70px);
+  transform: translate(-90px, -90px);
 }
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(2) {
-  transform: translate(0, -100px);
+  transform: translate(0, -120px);
 }
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(3) {
-  transform: translate(70px, -70px);
+  transform: translate(90px, -90px);
 }
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(4) {
-  transform: translate(-100px, 0);
+  transform: translate(-120px, 0);
 }
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(5) {
-  transform: translate(100px, 0);
+  transform: translate(120px, 0);
 }
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(6) {
-  transform: translate(-70px, 70px);
+  transform: translate(-90px, 90px);
 }
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(7) {
-  transform: translate(0, 100px);
+  transform: translate(0, 120px);
 }
 .mobile-nav input:checked ~ .mobile-menu li:nth-child(8) {
-  transform: translate(70px, 70px);
+  transform: translate(90px, 90px);
 }
 
-/* Show tooltips on hover */
-.mobile-nav input:checked ~ .mobile-menu li:hover a span {
+/* Overlay styles remain the same */
+.mobile-menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  z-index: 999;
+}
+
+.mobile-nav input:checked ~ .mobile-menu-overlay {
   opacity: 1;
+  pointer-events: auto;
 }
-
-/* Add staggered animation delays */
-.mobile-nav input:checked ~ .mobile-menu li:nth-child(1) { transition-delay: 0.1s; }
-.mobile-nav input:checked ~ .mobile-menu li:nth-child(2) { transition-delay: 0.2s; }
-.mobile-nav input:checked ~ .mobile-menu li:nth-child(3) { transition-delay: 0.3s; }
-.mobile-nav input:checked ~ .mobile-menu li:nth-child(4) { transition-delay: 0.4s; }
-.mobile-nav input:checked ~ .mobile-menu li:nth-child(5) { transition-delay: 0.5s; }
-.mobile-nav input:checked ~ .mobile-menu li:nth-child(6) { transition-delay: 0.6s; }
-.mobile-nav input:checked ~ .mobile-menu li:nth-child(7) { transition-delay: 0.7s; }
-.mobile-nav input:checked ~ .mobile-menu li:nth-child(8) { transition-delay: 0.8s; }
 
 /* Show only on mobile */
 @media (max-width: 768px) {
@@ -1108,43 +1110,7 @@ background-color: #2ecc71;
   .main-content {
     margin-left: 0 !important;
   }
-}
-
-
-    /* Add these styles to your existing CSS */
-.mobile-menu-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s ease;
-  z-index: 999; /* Below the menu but above everything else */
-}
-
-.mobile-nav input:checked ~ .mobile-menu-overlay {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-/* Update the menu toggle label to appear above overlay */
-.mobile-nav [type="checkbox"] + label {
-  z-index: 1001; /* Above the overlay */
-}
-
-/* Update the menu to appear above overlay */
-.mobile-menu {
-  z-index: 1000; /* Above the overlay */
-}
-
-/* Add this to close menu when overlay is clicked */
-.mobile-menu-overlay {
-  cursor: pointer;
-}
-    
+}    
   </style>
 </head>
 <body>
