--- a/admin.html
+++ b/admin.html
@@ -990,7 +990,7 @@ background-color: #2ecc71;
 .mobile-menu {
   position: absolute;
   bottom: 70px;
-  right: 0;
+  right: -60px;
   width: 300px;
   height: 300px;
   pointer-events: none;
