--- a/admin.html
+++ b/admin.html
@@ -1192,7 +1192,7 @@ background-color: #2ecc71;
     <li>
       <a href="#" onclick="logout()">
         <span>Logout</span>
-        <i class="material-symbols-outlined">logout</i>
+        <i class="material-symbols-outlined" style="background: red;">logout</i>
       </a>
     </li>
   </ul>
