--- a/admin.html
+++ b/admin.html
@@ -2017,6 +2017,7 @@ function viewRequestDetails(requestId) {
         else{
              document.getElementById('approvalForm').style.display = 'block';
         }*/
+        document.getElementById('approvalForm').style.display = 'block';
         // Display request details
         const detailsContent = document.getElementById('requestDetailsContent');
         detailsContent.innerHTML = `
