--- a/dashboard.html
+++ b/dashboard.html
@@ -624,7 +624,7 @@ document.addEventListener('DOMContentLoaded', function() {
           <td>${journey['StartTime'] || ''}</td>
           <td>
             <button class="btn btn-primary complete-btn" data-id="${journey['TravelID'] || ''}" style="background:#FFB343;">
-              Pending
+              End Trip
             </button>
           </td>
         `;
