--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
   width: 100%;
   margin: auto;
   max-width: 525px;
-  min-height: 905px;
+  min-height: 60rem;
   position: relative;
   box-shadow: 0 12px 15px 0 rgba(0,0,0,.24), 0 17px 50px 0 rgba(0,0,0,.19);
 }
@@ -185,7 +185,7 @@ body {
   }
   
   .login-wrap {
-    min-height: 750px;
+    min-height: 55rem;
     width: 90%;
   }
   
