--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@ body {
   border: none;
   padding: 15px 20px;
   border-radius: 25px;
-  background: rgba(255,255,255,.1);
+  
 }
 
 .login-form .group .label {
-  color: #aaa;
+  color: #fff;
   font-size: 12px;
   margin-bottom: 8px;
 }
