--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 /* NEW MAIN STYLES */
 body {
   margin: 0;
-  color: #6a6f8c;
-  background: #c8c8c8;
+  color: white;
+  background: white;
   font: 600 16px/18px 'Jost', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url(./img/travellogimg10.png) no-repeat center center fixed;
+
   background-size: cover;
 }
 
@@ -33,6 +33,7 @@ body {
   max-width: 525px;
   min-height: 60rem;
   position: relative;
+	background: url(./img/travellogimg10.png) no-repeat center center fixed;
   box-shadow: 0 12px 15px 0 rgba(0,0,0,.24), 0 17px 50px 0 rgba(0,0,0,.19);
 }
 
