--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body {
 .login-form .group .input,
 .login-form .group .button {
   width: 100%;
-  color: #fff;
+  color: black;
   display: block;
 }
 
