--- a/index.html
+++ b/index.html
@@ -98,9 +98,15 @@ body {
   margin-bottom: 15px;
 }
 
-.login-form .group .label,
-.login-form .group .input,
 .login-form .group .button {
+width: 100%;
+  color: #fff;
+  display: block;
+}
+
+.login-form .group .label,
+.login-form .group .input
+{
   width: 100%;
   color: black;
   display: block;
