--- a/dashboard.html
+++ b/dashboard.html
@@ -146,7 +146,7 @@
       <input type="number" id="passengerCount" placeholder="No. of Passengers" required>
       <input type="text" id="passengerName" placeholder="One Passenger Name" required>
       <input type="tel" id="passengerPhone" placeholder="Passenger Phone (10-digits)" pattern="[0-9]{10}" required>
-      <button type="button" onclick="saveAsPending()">Save as Pending</button>
+      <button type="button" onclick="saveAsPending()">Start Trip</button>
     </form>
   </div>
 
