--- a/admin.html
+++ b/admin.html
@@ -767,9 +767,9 @@ background-color: #2ecc71;
   .nav-rail.expanded + .main-content + .app-footer {
     left: 0;
   }
-}
 
-    @media (max-width: 768px) {
+
+  
   .nav-rail {
     width: 0;
     position: fixed;
@@ -1107,6 +1107,14 @@ background-color: #2ecc71;
   
   .main-content {
     margin-left: 0 !important;
+  }
+
+  .table-wrapper{
+        margin-top: 4rem;
+  }
+
+  input[type="search"], input[type="search"]:hover, input[type="search"]:focus {
+      margin-top: 3rem;
   }
 }    
 
