--- a/dashboard.html
+++ b/dashboard.html
@@ -162,7 +162,7 @@
       <input type="tel" id="passengerPhone" placeholder="Passenger Phone (10-digits)" required>
       <div id="passengerPhoneError" class="validation-message"></div>
 
-      <textarea id="purpose" placeholder="Purpose of the journey" required></textarea>
+      <textarea rows="4" id="purpose" placeholder="Purpose of the journey" required></textarea>
       <div id="purposeError" class="validation-message"></div>
       
       <button type="button" onclick="validateJourneyForm()">Start Trip</button>
