--- a/dashboard.html
+++ b/dashboard.html
@@ -253,11 +253,14 @@
         <th>End Point</th>
         <th>Start KM</th>
         <th>End KM</th>
+         <th>Total KM</th>
         <th>Start Time</th>
         <th>End Time</th>
         <th>Passenger Count</th>
         <th>Passenger Name</th>
         <th>Passenger Phone</th>
+        <th>Purpose of Travel</th>
+        <th>Fuel Filled</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -1398,11 +1401,14 @@ function loadCompletedJourneys() {
           <td>${journey.EndPoint || ''}</td>
           <td>${journey.StartKM || ''}</td>
           <td>${journey.EndKM || ''}</td>
+           <td>${journey.TotalKMTravel || ''}</td>
           <td>${formatTime(journey.StartTime)}</td>
           <td>${formatTime(journey.EndTime)}</td>
           <td>${journey.NoPassengers || ''}</td>
           <td>${journey.PassengerName || ''}</td>
           <td>${journey.PassengerPhone || ''}</td>
+          <td>${journey.Purpose || ''}</td>
+          <td>${journey.FuelFilled || ''}</td>
         `;
         tableBody.appendChild(row);
       });
