--- a/dashboard.html
+++ b/dashboard.html
@@ -370,7 +370,7 @@
         <span class="material-symbols-outlined">account_circle</span>
       </div>
       <h3 id="profileDriverName"></h3>
-      <span class="admin-badge" id="profileBadge"></span>
+      <span class="profile-badge" id="profileBadge"></span>
     </div>
     
     <div class="profile-details">
