--- a/dashboard.html
+++ b/dashboard.html
@@ -251,7 +251,7 @@
         <th>End Point</th>
         <th>Start KM</th>
         <th>End KM</th>
-         <th>Total KM</th>
+         <th>Total KM Travelled</th>
         <th>Start Time</th>
         <th>End Time</th>
         <th>Passenger Count</th>
