--- a/dashboard.html
+++ b/dashboard.html
@@ -92,6 +92,35 @@
 
   <div id="home" class="section active">
     <h2>Active Journeys</h2>
+
+    <!-- Add this inside the #home section, right after the <h2>Active Journeys</h2> -->
+<div id="guestTimerContainer" class="guest-timer-container" style="display: none;">
+  <div class="timer">
+    <div id="min">
+      <span id="min_1">0</span>
+      <span id="min_0">0</span>
+    </div>
+    <div id="colon">:</div>
+    <div id="sectens">
+      <span id="sectens_6">0</span>
+      <span id="sectens_5">0</span>
+      <span id="sectens_4">0</span>
+      <span id="sectens_3">0</span>
+      <span id="sectens_2">0</span>
+      <span id="sectens_1">0</span>
+      <span id="sectens_0">0</span>
+    </div>
+    <div id="secones">
+      <span id="secones_60">0</span>
+      <span id="secones_59">9</span>
+      <!-- Continue with all seconds from 58 to 0 -->
+      <span id="secones_0">0</span>
+    </div>
+  </div>
+  <div class="timer-label">Guest Access Expires In</div>
+</div>
+
+    
     <div class="table-wrapper">
     <table class="fl-table" id="pendingTable">
         <thead>
