--- a/dashboard.html
+++ b/dashboard.html
@@ -585,6 +585,9 @@ document.addEventListener('DOMContentLoaded', function() {
         
         // You can use other data as needed
         console.log('Driver ID:', driverData.id);
+        // Add this line after you load the driver data
+      checkGuestTimer();
+
         
     } else {
         // If no driver data found, redirect to login
