--- a/dashboard.html
+++ b/dashboard.html
@@ -1806,7 +1806,9 @@ function checkGuestTimer() {
 
 class CountdownTimer {
   constructor(activeTimestamp) {
-    this.expiryTime = new Date(activeTimestamp).getTime() + (24 * 60 * 60 * 1000);
+    // User was created at activeTimestamp, can be active for 24 hours from THEN
+    this.userCreationTime = new Date(activeTimestamp).getTime();
+    this.expiryTime = this.userCreationTime + (24 * 60 * 60 * 1000);
     this.timerInterval = null;
     this.initializeTimer();
   }
