--- a/dashboard.html
+++ b/dashboard.html
@@ -91,7 +91,7 @@
 <div class="main-content">
 
   <div id="home" class="section active">
-    <h2>Active Journeys</h2>
+    <h2 class="activeJourney">Active Journeys</h2>
 
     <!-- Add this inside the #home section, right after the <h2>Active Journeys</h2> -->
 <div id="guestTimerContainer" class="guest-timer-container" style="display: none;">
